[package]
name = "dkg-client-rust-test"
version = "0.1.0"
edition = "2018"
authors = ["OriginTrail"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dkg-client-rust = { path = "../lib" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
tokio = { "version" = "1.12.0" }
async-std = { version = "1", features = ["attributes", "tokio1"] }
