[package]
name = "dkg-client-rust"
version = "0.1.0"
edition = "2018"
authors = ["OriginTrail"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
